# mtg-collection-tools

./: .gitignore  README.md  dev-notes.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  poetry_setup.sh
llm-data/: prompt_new_deck_from_collection.md  prompt_new_deck_from_collection.txt  prompt_upgrade_existing_deck.md
mtg_collection_tools/: main.py
mtg_collection_tools/commands/: init.py
mtg_collection_tools/commands/agent/: __init__.py  run.py
mtg_collection_tools/commands/collection/: __init__.py  refresh_collection.py
mtg_collection_tools/commands/scryfall/: __init__.py  refresh_cards.py
mtg_collection_tools/util/agent/: deckbuilder.py  deckbuilder_backup.py  tools.py  work_with_existing_deck.py
mtg_collection_tools/util/common/: constants.py  logging.py
mtg_collection_tools/util/models/: agent.py  config.py  mtg.py
mtg_collection_tools/util/providers/: __init__.py  archidekt.py  base.py
mtg_collection_tools/util/scryfall/: api.py
